<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.easy4j</groupId>
	<artifactId>metrics-biz</artifactId>
	<version>1.0.x.20260630-SNAPSHOT</version>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https:github.com/easy-4-java/${project.artifactId}.git</connection>
		<developerConnection>scm:git:https:github.com/easy-4-java/${project.artifactId}.git</developerConnection>
		<url>https:github.com/easy-4-java/${project.artifactId}</url>
		<tag>${project.artifactId}</tag>
	</scm>

	<developers>
		<developer>
			<name>wandl</name>
			<email>hnxyhcwdl1003@163.com</email>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+8</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<repository>
			<id>2624322-release-6F6h6R</id>
			<url>https://packages.aliyun.com/6927b116e6c3e0425dbdf60d/maven/2624322-release-6f6h6r</url>
		</repository>
		<snapshotRepository>
			<id>2624322-snapshot-3EoOv3</id>
			<url>https://packages.aliyun.com/6927b116e6c3e0425dbdf60d/maven/2624322-snapshot-3eoov3</url>
		</snapshotRepository>
	</distributionManagement>
	
	<build>
		<pluginManagement>
			<plugins>
				  
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version> 
					  
					<configuration>
						<defaultLibBundleDir>lib</defaultLibBundleDir>
						
						<source>1.8</source>
						
						<target>1.8</target>
						
						<encoding>${project.build.sourceEncoding}</encoding>
						
						<maxmem>512M</maxmem>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.1</version>
					  
					<configuration>
						
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
					
					<executions>
						<execution>
							<id>copy-resources</id>
							<phase>validate</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${basedir}/target/classes</outputDirectory>
								<resources>
									<resource>
										<directory>src/main/resources</directory>
										
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>3.0.4</version>
					<executions>
						<execution>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				  
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.19.1</version>
					<configuration>
						
						<skip>true</skip>
						<skipTests>true</skipTests>
						
						<forkMode>once</forkMode>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine> 
						<additionalClasspathElements> 
			                <additionalClasspathElement>${basedir}/target/test-classes</additionalClasspathElement>  
			            </additionalClasspathElements>  
			            <includes>  
			                <include>**/*Test.java</include> 
			            </includes> 
                        <excludes>
                            <exclude>**/TestBean.java</exclude>
                        </excludes>
					</configuration>					
				</plugin>
				 
				<plugin>  					 
					<groupId>org.apache.maven.plugins</groupId>  
					<artifactId>maven-jar-plugin</artifactId>  
					<version>3.0.2</version>  
					<configuration> 
						<encoding>${project.build.sourceEncoding}</encoding>
						<skipIfEmpty>true</skipIfEmpty> 
	                    <archive>  
                    	 	<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							</manifest>
							
							
	                    </archive>  
	                </configuration>  
				</plugin> 
				 
				<plugin>  					 
					<groupId>org.apache.maven.plugins</groupId>  
					<artifactId>maven-install-plugin</artifactId>  
					<version>2.5.2</version>  
				</plugin> 
				 
				<plugin>  
		            <groupId>org.apache.maven.plugins</groupId>  
		            <artifactId>maven-deploy-plugin</artifactId>  
		            <version>2.8.2</version>  
		        </plugin>
								
				<plugin>
					 <groupId>org.apache.maven.plugins</groupId>
					 <artifactId>maven-source-plugin</artifactId>
					 <version>3.0.1</version> 
					 
					 <configuration>  
					 	 <testFailureIgnore>true</testFailureIgnore>
					 	 
	                     <attach>true</attach>  
	                     <encoding>${project.build.sourceEncoding}</encoding>  
	                 </configuration> 
					 <executions>
						 <execution>
							 <id>attach-sources</id>
							 <phase>package</phase>
							 <goals>
							 	
								
								<goal>jar-no-fork</goal>
							 </goals>
						 </execution>
					 </executions>
				</plugin>
					
				<plugin>  
		            <groupId>org.apache.maven.plugins</groupId>  
		            <artifactId>maven-javadoc-plugin</artifactId>  
		            <version>2.10.4</version> 
					<configuration>  
	                    <aggregate>true</aggregate>  
	                    <argLine>-Dfile.encoding=UTF-8</argLine>
                       	<charset>${project.build.sourceEncoding}</charset> 
                        <encoding>${project.build.sourceEncoding}</encoding> 
                        <docencoding>${project.build.sourceEncoding}</docencoding> 
	                </configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>				
		        </plugin>
			</plugins>
		</pluginManagement>
		</build>
	
	<properties>
		<lombok.version>1.18.46</lombok.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<ehcache.version>2.10.4</ehcache.version>
		<ehcache-core.version>2.6.11</ehcache-core.version>
		<metrics.version>4.1.1</metrics.version>
 		<junit.version>4.13.2</junit.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<slf4j.version>2.0.18</slf4j.version>
 		<spring.version>4.3.11.RELEASE</spring.version>
 		<metrics-statsd.version>3.0.1</metrics-statsd.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
		
			
			
			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			
			
			
			
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet-api.version}</version>
			</dependency>
			
			
			
			
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			
			
			
			
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>

			
			
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-core</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-annotation</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-healthchecks</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jvm</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-httpclient</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-httpasyncclient</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-servlet</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-ehcache</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jcache</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-json</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-servlets</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-graphite</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-ganglia</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jersey</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jersey2</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jetty8</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jetty9</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jetty9-legacy</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-jdbi</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-logback</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-log4j</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.dropwizard.metrics</groupId>
				<artifactId>metrics-log4j2</artifactId>
				<version>${metrics.version}</version>
			</dependency>
			
			<dependency>
				<groupId>io.github.hengyunabc</groupId>
				<artifactId>metrics-kafka</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>0.10.2.0</version>
			</dependency>
			
			<dependency>
				<groupId>io.github.hengyunabc</groupId>
				<artifactId>metrics-zabbix</artifactId>
				<version>0.0.5</version>
			</dependency>
			<dependency>
				<groupId>io.github.hengyunabc</groupId>
				<artifactId>mybatis-ehcache-spring</artifactId>
				<version>0.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.influxdb</groupId>
				<artifactId>influxdb-java</artifactId>
				<version>2.5</version>
			</dependency>
			
			
			
			<dependency>
				<groupId>com.github.cb372</groupId>
				<artifactId>metrics-sigar</artifactId>
				<version>0.2.2</version>
			</dependency>
			
			<dependency>
				<groupId>com.github.davidb</groupId>
				<artifactId>metrics-influxdb</artifactId>
				<version>0.9.3</version>
			</dependency>
			
			
			 <dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache</artifactId>
				<version>${ehcache.version}</version>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache-core</artifactId>
				<version>${ehcache-core.version}</version>
			</dependency>
			
		<dependency><groupId>com.izettle</groupId><artifactId>metrics-influxdb</artifactId><version>1.1.8</version><scope>provided</scope></dependency><dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version><scope>provided</scope></dependency></dependencies>

	</dependencyManagement>

	<dependencies><dependency><groupId>junit</groupId><artifactId>junit</artifactId><scope>test</scope></dependency><dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><scope>provided</scope></dependency><dependency><groupId>javax.servlet</groupId><artifactId>javax.servlet-api</artifactId><scope>provided</scope></dependency><dependency><groupId>org.springframework</groupId><artifactId>spring-context</artifactId><scope>provided</scope></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-annotation</artifactId></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-core</artifactId></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-healthchecks</artifactId></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-jvm</artifactId><scope>provided</scope></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-servlets</artifactId><scope>provided</scope></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-servlet</artifactId><scope>provided</scope></dependency><dependency><groupId>io.dropwizard.metrics</groupId><artifactId>metrics-ehcache</artifactId><scope>provided</scope></dependency><dependency><groupId>com.github.cb372</groupId><artifactId>metrics-sigar</artifactId><scope>provided</scope></dependency><dependency><groupId>org.apache.kafka</groupId><artifactId>kafka-clients</artifactId><scope>provided</scope></dependency><dependency><groupId>io.github.hengyunabc</groupId><artifactId>metrics-kafka</artifactId><scope>provided</scope></dependency><dependency><groupId>com.izettle</groupId><artifactId>metrics-influxdb</artifactId><scope>provided</scope></dependency><dependency><groupId>com.github.davidb</groupId><artifactId>metrics-influxdb</artifactId><scope>provided</scope></dependency><dependency><groupId>org.influxdb</groupId><artifactId>influxdb-java</artifactId><scope>provided</scope></dependency><dependency><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><scope>provided</scope></dependency></dependencies><repositories>
		<repository>
	        <id>sonatype</id>
	        <url>https://oss.sonatype.org/content/groups/public</url>
	        <releases>
	           <enabled>true</enabled>
	        </releases>
	        <snapshots>
	          <enabled>false</enabled>
	        </snapshots>
	     </repository>
	</repositories>

	</project>